Fixed alignment of visualizer elements

--- a/src/app/widgets/Visualizer/camera-control-area.styl
+++ b/src/app/widgets/Visualizer/camera-control-area.styl
@@ -3,7 +3,7 @@
     grid-template-columns: 1fr 1fr 1fr;
     gap: 2rem;
     position: absolute;
-    top: 60px;
+    top: 20px;
     right: 20px;
     left: 20px;
 }
@@ -50,7 +50,6 @@
     height: 10vh
     max-height: 70px
     border-radius: 5px;
-    margin-top: 15px;
     width: 100%;
     max-width: 255px;
 }
