--- a/src/app/widgets/Visualizer/dashboard.styl
+++ b/src/app/widgets/Visualizer/dashboard.styl
@@ -1,6 +1,6 @@
 .dashboard {
     position: absolute;
-    top: 60px;
+    top: 20px;
     left: 10px;
     right: 10px;
     bottom: 0;
