--- a/src/app/widgets/Visualizer/workflow-control.styl
+++ b/src/app/widgets/Visualizer/workflow-control.styl
@@ -2,7 +2,7 @@
     position: absolute;
     left: 20px;
     right: 20px;
-    bottom: 100px;
+    bottom: 20px;
 
     :global {
         .btn-group {
